Notes now have overflow function incase there are more notes than that the containter can hold. Also fixed the way the border looks

--- a/src/pages/styles/notes.css
+++ b/src/pages/styles/notes.css
@@ -2,7 +2,6 @@
 	height: 80%;
 	width: 80%;
 	padding-left: 50px;
-	overflow-y: auto;
 }
 
 .notes-header {
@@ -15,24 +14,26 @@
 }
 
 .notes-container {
-	display: flex;
+	display: absolute;
 	flex-grow: 1;
 	padding: 40px;
 	width: 90%;
 	height: 80%;
 	border-radius: 70px;
 	background-color: #e0f2fe;
+	overflow: hidden;
 }
 
 .notes-container-inside {
 	background-color: #ffffff;
 	width: 94%;
 	height: 92%;
+	border-radius: 50px;
 	padding-left: 3%;
 	padding-right: 3%;
 	padding-top: 2%;
-	margin: 0%;
-	padding-bottom: 3%;
+	padding-bottom: 2%;
+	overflow-y: auto;
 }
 
 .notes-filter-bar {
@@ -85,6 +86,7 @@
 	margin-right: 0px;
 	margin-bottom: 0px;
 }
+
 
 .table-section-note-filter {
 	margin: 0px;
